# rnnlm

./: CMakeLists.txt  rnnlmlibConfig.cmake.in
include/: fastexp.h  rnnlmlib.h
src/: rnnlmlib.cpp
